--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel=" stylesheet" type="text/css" src ="style.css"/>
     </head>
     <body>
+        <h1>Probando Pagina</h1>
         <img src="(n) 1.png" alt=" Hola"/>
     </body>
 </html>
