--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Probando Pagina</h1>
         <img src="(n) 1.png" alt=" Hola"/>
+        <h1>Probando Pagina</h1>
     </body>
 </html>
