--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>Probando Pagina</h1>
+        <h2>Probando Pagina</h2>
+        <p>Probando Pagina</p>
+        <em>Probando Pagina</em>
         <img src="(n) 1.png" alt=" Hola"/>
         <h1>Probando Pagina</h1>
     </body>
