--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <h2>Probando Pagina</h2>
         <p>Probando Pagina</p>
         <em>Probando Pagina</em>
-        <img src="(n) 1.png" alt=" Hola"/>
-        <h1>Probando Pagina</h1>
+        <img src="gato.webp" alt=" Hola"/>
     </body>
 </html>
