--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <h2>Probando Pagina</h2>
         <p>Probando Pagina</p>
         <em>Probando Pagina</em>
-        <img src="gato.webp" alt="gato"/>
+        <img src="assets/gato.webp" alt="gato"/>
     </body>
 </html>
