--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel=" stylesheet" type="text/css" href ="style.css"/>
     </head>
     <body>
-        <h1 class="tittle">Al ivan le gusta el pene</h1>
+        <h1 class="tittle">Gato Terraria</h1>
         <h2>Probando Pagina</h2>
         <p>Probando Pagina</p>
         <em>Probando Pagina</em>
