--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <title> Print 3D (Felipe Salazar)</title>
-    <img src="assets/AdobeStock_449975564b.jpg">
+    <img src="assets/AdobeStock_449975564b.jpg" width="300" height="300">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
