--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <title> Print 3D (Felipe Salazar)</title>
+    <h1> Print 3D (Felipe Salazar)</h1>
     <img src="assets/AdobeStock_449975564b.jpg" width="300" height="300">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
