--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
         <div style="text-align: center;">
             <img src="assets/AdobeStock_449975564b.jpg" width="300" height="300">
         </div>
-        <div style="text-align: center;">
-            <h1> Print 3D (Felipe Salazar)</h1>
-        </div>
+        <h1 style="text-align: center;"> Print 3D (Felipe Salazar)</h1>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Navbar</a>
