--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     </head>
 
     <body>
+        <h1 style="text-align: center;"> Print 3D (Felipe Salazar)</h1>
         <div style="text-align: center;">
             <img src="assets/AdobeStock_449975564b.jpg" width="300" height="300">
         </div>
-        <h1 style="text-align: center;"> Print 3D (Felipe Salazar)</h1>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a style="text-align: center;" class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
