--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
-    <title>Print 3D</title>
+    <title>Pokedex Completa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    <h1 style="text-align: center;"> Print 3D (Felipe Salazar)</h1>
-    <div style="text-align: center;">
+    <h1 style="text-align: center;"> Pokedex Completa (Felipe Salazar)</h1>
+    <!-- <div style="text-align: center;">
         <img src="assets/AdobeStock_449975564b.jpg" width="300" height="300">
-    </div>
+    </div> -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#"><img src="assets/logo_pkmn.webp" width="50" height="40" alt="Print3D"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -22,21 +22,25 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            Dropdown
+                            Generacion
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Primera Gen</a></li>
+                            <li><a class="dropdown-item" href="#">Segunda Gen</a></li>
+                            <li><a class="dropdown-item" href="#">Tercera Gen</a></li>
+                            <li><a class="dropdown-item" href="#">Cuarta Gen</a></li>
+                            <li><a class="dropdown-item" href="#">Quinta Gen</a></li>
+                            <li><a class="dropdown-item" href="#">Sexta Gen</a></li>
+                            <li><a class="dropdown-item" href="#">Septima Gen</a></li>
+                            <li><a class="dropdown-item" href="#">Octava Gen</a></li>
+                            <li><a class="dropdown-item" href="#">Novena Gen</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Todas</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -50,6 +54,25 @@
             </div>
         </div>
     </nav>
+    <div class="col-6 col-md-4 col-lg-2 mb-4">
+        <div class="card text-center">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" class="card-img-top" alt="Pikachu">
+            <div class="card-body">
+                <h5 class="card-title">Pikachu</h5>
+                <p class="card-text">Tipo: Eléctrico</p>
+                <a href="#" class="btn btn-outline-primary" onclick="mostrarPokemon('pikachu')">Ver más</a>
+            </div>
+        </div>
+    </div>
+    <div id="pikachu" class="container pokemon-section mt-4">
+        <button class="btn btn-secondary mb-3" onclick="volver()">← Volver a la Pokédex</button>
+        <h2>Pikachu</h2>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" alt="Pikachu">
+        <p><strong>Tipo:</strong> Eléctrico</p>
+        <p><strong>Fortalezas:</strong> Agua, Volador</p>
+        <p><strong>Debilidades:</strong> Tierra</p>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
