--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="col">
                 <div class="card text-center">
-                    <img src="https://images.wikidexcdn.net/mwuploads/wikidex/thumb/8/86/latest/20190406151903/Ivysaur.png/200px-Ivysaur.png"
+                    <img src="https://images.wikidexcdn.net/mwuploads/wikidex/8/86/Ivysaur.png"
                         class="card-img-top" alt="Ivysaur">
                     <div class="card-body">
                         <h5 class="card-title">Ivysaur</h5>
@@ -104,11 +104,11 @@
             <div class="col">
                 <div class="card text-center">
                     <img src="https://images.wikidexcdn.net/mwuploads/wikidex/thumb/f/fb/latest/20200411222755/Charmeleon.png/200px-Charmeleon.png"
-                        class="card-img-top" alt="Charmaleon">
+                        class="card-img-top" alt="Charmeleon">
                     <div class="card-body">
                         <h5 class="card-title">Charmaleon</h5>
                         <p class="card-text">Tipo: <img src="assets/Tipo_fuego_SL.png" alt="tipo fuego"></p>
-                        <a href="#Charmaleon" class="btn btn-outline-primary" onclick="mostrarPokemon('Charmaleon')">Ver más</a>
+                        <a href="#Charmeleon" class="btn btn-outline-primary" onclick="mostrarPokemon('Charmeleon')">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -1776,17 +1776,17 @@
         <p><strong>Superresistente a:</strong> <em>Ninguno</em></p>
         <p><strong>Inmune a:</strong> <em>Ninguno</em></p>
     </div>
-    <div id="Venusaur" class="container pokemon-section mt-4">
+    <div id="Charmeleon" class="container pokemon-section mt-4">
         <button class="btn btn-secondary mb-3" onclick="volver()">← Volver a la Pokédex</button>
-        <h2>Venusaur</h2>
-        <img src="https://images.wikidexcdn.net/mwuploads/wikidex/thumb/7/73/latest/20190406151906/Venusaur.png/200px-Venusaur.png" alt="Venusaur">
-        <p><strong>Evolucion:</strong> <em>Sin Evolucion</em></p>
-        <p><strong>Tipo:</strong> <img src="assets/Tipo_planta_SL.png" alt="tipo planta"><img src="assets/Tipo_veneno_SL.png" alt="tipo veneno"></p>
+        <h2>Charmeleon</h2>
+        <img src="https://images.wikidexcdn.net/mwuploads/wikidex/thumb/f/fb/latest/20200411222755/Charmeleon.png/200px-Charmeleon.png" alt="Charmeleon">
+        <p><strong>Evolucion:</strong> <em>Nivel 32</em></p>
+        <p><strong>Tipo:</strong> <img src="assets/Tipo_fuego_SL.png" alt="tipo fuego"></p>
         <p><strong>Fortalezas:</strong> <img src="assets/Tipo_agua_SL.png" alt="tipo agua"> <img src="assets/Tipo_volador_SL.png" alt="tipo volador"></p>
         <p><strong>Superdébil:</strong> <em>Ninguno</em></p>
-        <p><strong>Débil a:</strong> <img src="assets/Tipo_fuego_SL.png" alt="tipo fuego"> <img src="assets/Tipo_hielo_SL.png" alt="tipo hielo"> <img src="assets/Tipo_volador_SL.png" alt="tipo volador"> <img src="assets/Tipo_psíquico_SL.png" alt="tipo psiquico"></p>
-        <p><strong>Daño normal:</strong> <img src="assets/Tipo_acero_SL.png" alt="tipo acero"> <img src="assets/Tipo_bicho_SL.png" alt="tipo bicho"> <img src="assets/Tipo_dragón_SL.png" alt="tipo dragon"> <img src="assets/Tipo_fantasma_SL.png" alt="tipo fantasma"> <img src="assets/Tipo_normal_SL.png" alt="tipo normal"> <img src="assets/Tipo_roca_SL.png" alt=" tipo roca"> <img src="assets/Tipo_siniestro_SL.png" alt="tipo siniestro"> <img src="assets/Tipo_tierra_SL.png" alt="tipo tierra"> <img src="assets/Tipo_veneno_SL.png" alt    ="tipo veneno"></p>
-        <p><strong>Resistente a:</strong> <img src="assets/Tipo_agua_SL.png" alt="tipo agua"> <img src="assets/Tipo_eléctrico_SL.png" alt="tipo electrico"> <img src="assets/Tipo_hada_SL.png" alt="tipo hada"> <img src="assets/Tipo_lucha_SL.png" alt="tipo lucha"></p>
+        <p><strong>Débil a:</strong>  <img src="assets/Tipo_agua_SL.png" alt="tipo agua"> <img src="assets/Tipo_roca_SL.png" alt="tipo roca"> <img src="assets/Tipo_tierra_SL.png" alt="tipo tierra"></p>
+        <p><strong>Daño normal:</strong> <img src="assets/Tipo_dragón_SL.png" alt="tipo dragon"> <img src="assets/Tipo_eléctrico_SL.png" alt="tipo electrico"> <img src="assets/Tipo_fantasma_SL.png" alt="tipo fantasma"><img src="assets/Tipo_lucha_SL.png" alt="tipo lucha"><img src="assets/Tipo_normal_SL.png" alt="tipo normal"><img src="assets/Tipo_psíquico_SL.png" alt="tipo psiquico"> <img src="assets/Tipo_siniestro_SL.png" alt="tipo siniestro"><img src="assets/Tipo_veneno_SL.png" alt="tipo veneno"><img src="assets/Tipo_volador_SL.png" alt="tipo volador"></p>
+        <p><strong>Resistente a:</strong> </p>
         <p><strong>Superresistente a:</strong> <img src="assets/Tipo_planta_SL.png" alt="tipo planta"></p>
         <p><strong>Inmune a:</strong> <em>Ninguno</em></p>
     </div>
